@@ -1,3 +1,8 @@
+2008-01-22  Jari Aalto  <jari.aalto@cante.net>
+
+	* tiny/tiny-setup.el (tiny-setup-compile-kit-libraries):
+	Fix indentation.
+
 2007-11-04  Jari Aalto  <jari.aalto@cante.net>
 
 	* tiny/tinymail.el (tinymail-buffer-email-address-scramble-area):
